--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: multiplex_development
+  database: apple_mdm
   pool: 5
   username: root
   password:
